[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "video-depth-anything"
version = "0.1.0"
description = "DepthAnything runner with assets and top-level scripts"
dependencies = [
]

[tool.hatch.build.targets.wheel]
include = [
  "video_depth_anything/**/*",
  "utils/**/*",
  "assets/**/*",
  "benchmark/**/*",
  "run.py",
  "app.py",
  "get_weights.sh"
]
