[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "video-depth-anything"
version = "0.1.3"
description = "DepthAnything runner with assets and top-level scripts"
dependencies = []

[tool.setuptools]
packages = ["video_depth_anything"]

[tool.setuptools.package-data]
video_depth_anything = ["**/*.py", "../*.py", "../*.sh", "../assets/**/*", "../utils/**/*", "../benchmark/**/*"]
